<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">


        <!--<de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo_main" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:typeface="monospace"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#DCDCDC"
                app:cardElevation="10dp"
                android:id="@+id/cardView4"
                android:layout_centerInParent="true"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/mybutton"
                android:text="@string/btn_reset_password"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="100dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>